--- a/.env
+++ b/.env
@@ -5,3 +5,17 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://ferhat:FERHATSAKI202403@ferhat.xga8x.mongodb.net/scrubandshine"
+JWT_SECRET="FERHATSANDRAFERHAT20242025"
+JWT_EXPIRES_IN=60d
+
+NODE_ENV=development
+EMAIL_USERNAME=9eee1543982f73
+EMAIL_PASSWORD=fb82a287b387b4
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
+EMAIL_FROM = ferhattaher00@gmail.com
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+# GMAIL_PORT=587
+# GMAIL_HOST=smtp.gmail.com
+# GMAIL_PASSWORD=ilhp aprn zcyl kgps
