--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie": "^0.7.2",
     "framer-motion": "^11.11.1",
     "jose": "^5.9.3",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
