--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DATABASE_URL="mongodb+srv://ferhat:FERHATSAKI202403@ferhat.xga8x.mongodb.net/scr
 JWT_SECRET="FERHATSANDRAFERHAT20242025"
 JWT_EXPIRES_IN=60d
 
-NODE_ENV=development
+NODE_ENV=production
 EMAIL_USERNAME=9eee1543982f73
 EMAIL_PASSWORD=fb82a287b387b4
 EMAIL_HOST=sandbox.smtp.mailtrap.io
@@ -16,6 +16,6 @@ EMAIL_PORT=25
 EMAIL_FROM = ferhattaher00@gmail.com
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 
-# GMAIL_PORT=587
-# GMAIL_HOST=smtp.gmail.com
-# GMAIL_PASSWORD=ilhp aprn zcyl kgps
+GMAIL_PORT=587
+GMAIL_HOST=smtp.gmail.com
+GMAIL_PASSWORD=nwye rqnd mfmt dpjg
